// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SkillItem closes the dialog when the close button is clicked 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-bxhczq-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <span
      data-icon="icon-js"
      data-testid="icon"
    />
    JavaScript
  </button>
</div>
`;

exports[`SkillItem closes the dialog when the close button is clicked 2`] = `
<div
  aria-hidden="true"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-bxhczq-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <span
      data-icon="icon-js"
      data-testid="icon"
    />
    JavaScript
  </button>
</div>
`;

exports[`SkillItem closes the dialog when the close button is clicked 3`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-bxhczq-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <span
      data-icon="icon-js"
      data-testid="icon"
    />
    JavaScript
  </button>
</div>
`;
